--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@vueuse/core": "^10.9.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-toastify": "^0.2.2"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.7.4",
